Fix: issue on updating remaining number and spacing - white-space: pre-wrap in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@
 
   min-height: 200px;
   background: #f7f794;
+
+  white-space: pre-wrap;
 }
 
 .note-footer {
